# ez-expense

./: .env.template  .gitignore  BROWSER_SUPPORT.md  HOTEL_ITEMIZER_README.md  PROJECT_STATUS.md  README.md  TESTING_STRATEGY.md  app_launcher.py  azure_ai_tools.py  browser.py  capture_ms_expense_steps.py  config.py  conftest.py  debug_macos_app.py  debug_ms_expense_live.py  debug_path_resolution.py  debug_playwright.py  deploy-local.sh  deploy.sh  elem.js  expense_importer.py  expense_matcher.py  find_item_in_page.py  front_end_launcher.py  gui_dialogs.py  header_row.html  inspect_ms_expense.py  integrated_hotel_itemizer.py  invoice_extractor.py  item_row.html  itemization.py  itemize_Test.py  later.py  launcher.py  local_model_manager.py  main.py  manual_step_recorder.py  manual_test.py  ms_expense_itemizer.py  ms_expense_manual_steps_20250929_222121.json  (+16 more)
.claude/: settings.local.json
.claude/skills/playwright-edge-setup/: SKILL.md
.github/: copilot-instructions.md  release-template.md
.github/workflows/: build-and-release.yml  release.yml  simple-build.yml  test.yml
assets/: category_list.csv
deployment/: DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  README.md  USER_GUIDE.md  app-launcher.sh  build-macos-signed.sh  build-releases.sh  build.bat  build.sh  create-homebrew-tap.sh  ez-expense.spec  package.sh  test-executable.sh
deployment/hooks/: hook-playwright.py
deployment/readme-templates/: README.txt
deployment/run/: run-ez-expense.bat  run-ez-expense.sh
ez-expense-distribution/: .env.template  README.txt  USER_GUIDE.md  run-ez-expense.bat  run-ez-expense.sh
ez-expense-distribution/assets/: category_list.txt  currency_codes.txt
front_end/: app.py
front_end/hve/: 2024-12-09-1030-invoice-receipt-management-webapp.md  PHASE1_README.md  PHASE2_API_DOCUMENTATION.md  PHASE2_IMPLEMENTATION_SUMMARY.md  copilot-instructions.md  initial_instructions.md
front_end/routes/: expense_routes.py  model_routes.py  receipt_routes.py
front_end/routes/hotel/: __init__.py  (+1 more)
front_end/templates/: index.html
front_end/tests/: test_phase1.py  test_phase2_backend.py
hotel_itemizer/: IMPLEMENTATION_SUMMARY.md  __init__.py  config.py  daily_rate_calculator.py  hotel_categorizer.py  hotel_extractor.py  hotel_validator.py  models.py  ms_expense_automator.py
tests/: debug_response.py  test_azure_ai_tools.py  test_bulk_matching.py  test_e2e_frontend.py  test_e2e_myexpense_automation.py  test_fill_expense_report.py  test_invoice_extraction.py  test_local_model_and_extraction.py  test_matching_function.py  test_receipt_matching.py
tests/hotel/: test_hotel_extractor.py  test_integration.py
tests/test_data/: test_expense_report.csv  test_expense_report.xlsx
(+9 files in other folders)
