[project]
name = "ez-expense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "pydantic>=2.11.7",
    "werkzeug>=3.0.0",
    "requests>=2.32.5",
    "pdfplumber>=0.11.7",
    "openai>=1.107.0",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "hypercorn>=0.17.3",
    "pytest-asyncio>=1.2.0",
]

[dependency-groups]
dev = ["pyright>=1.1.405", "pytest>=8.4.2", "ruff>=0.12.12"]

[tool.ruff]
line-length = 100
